--- a/Social/Base.lproj/Main.storyboard
+++ b/Social/Base.lproj/Main.storyboard
@@ -83,21 +83,30 @@
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="01M-WU-VYD"/>
+                                        </connections>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vHL-GN-e3j" customClass="FancyField" customModule="Social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="45" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="XO4-uk-kUq"/>
+                                        </connections>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3j-CV-GMh" customClass="FancyButton" customModule="Social" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3j-CV-GMh" customClass="FancyButton" customModule="Social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="90" width="315" height="36"/>
-                                        <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <state key="normal" title="Sign In">
+                                        <state key="normal" title="Create / Sign In">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="signInButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NMf-n0-vk2"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -116,10 +125,15 @@
                             <constraint firstItem="llh-dA-aQV" firstAttribute="top" secondItem="iBb-3y-CbV" secondAttribute="bottom" constant="30" id="n7e-dd-nIz"/>
                             <constraint firstAttribute="trailing" secondItem="ZmN-OD-rOO" secondAttribute="trailing" constant="30" id="nbc-d5-b02"/>
                             <constraint firstItem="llh-dA-aQV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ot3-9V-neI"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="I2X-g6-md3" secondAttribute="bottom" id="wo2-Qi-Vil"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="I2X-g6-md3" secondAttribute="bottom" id="u6i-Tf-iQf"/>
                             <constraint firstItem="ZmN-OD-rOO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="yS8-v3-4hU"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="6Wp-qM-aj7" id="bOJ-Zw-HPu"/>
+                        <outlet property="passwordTextField" destination="vHL-GN-e3j" id="iIg-kh-eiy"/>
+                        <outlet property="signInButton" destination="j3j-CV-GMh" id="ypL-SG-xdR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
